[gd_scene format=3 uid="uid://begapx7adc5vg"]

[ext_resource type="Script" uid="uid://djfnuvuephx3o" path="res://scripts/ui/MainMenu.gd" id="1"]

[sub_resource type="SystemFont" id="SystemFont_vjtqc"]

[sub_resource type="LabelSettings" id="LabelSettings_6jbdy"]
font = SubResource("SystemFont_vjtqc")
font_size = 48

[node name="MainMenu" type="Control" unique_id=2037690658]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=908215223]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=249299308]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=668303283]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=195076662]
layout_mode = 2
theme_override_colors/font_color = Color(0.909804, 0.831373, 0.301961, 1)
theme_override_font_sizes/font_size = 64
text = "THE BACKROOMS"
label_settings = SubResource("LabelSettings_6jbdy")
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1096199135]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nueva Partida"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1181845222]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1176000314]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
